--- a/views/demo.pug
+++ b/views/demo.pug
@@ -1,5 +1,20 @@
-html 
-    head 
-        title=title
-    body 
-        h1=message
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gym App</title>
+</head>
+<body>
+    <nav id="navbar">
+        <ul>
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact</li>
+            <li>services</li>
+            
+        </ul>
+    </nav>
+</body>
+</html>
